--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
     "react-typography": "^0.16.19",
-    "typography": "^0.16.19"
+    "typography": "^0.16.19",
+    "typography-plugin-code": "^0.16.19"
   },
   "devDependencies": {
     "prettier": "^1.19.1"
