--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
+    "react-icons": "^3.8.0",
+    "react-share": "^4.0.1",
     "react-typography": "^0.16.19",
     "typography": "^0.16.19",
     "typography-plugin-code": "^0.16.19"
