--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "url": "https://github.com/gatsbyjs/gatsby/issues"
   },
   "dependencies": {
-    "@cloudgardener/typography-theme-cloudgardener": "1.1.3",
+    "@cloudgardener/typography-theme-cloudgardener": "^2.0.0",
     "gatsby": "^2.24.47",
     "gatsby-image": "^2.4.16",
     "gatsby-plugin-feed": "^2.5.11",
